[package]
name = "pow-waf"
version = "0.1.0"
edition = "2021"

[lints.clippy]
all = "allow"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[[example]]
name = "mock_client"
path = "examples/mock_client.rs"

[features]
default = ["bincode"]
bincode = []
serde_json = []

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[dependencies]
log = "0.4"
proxy-wasm = "0.2.2"
pin-project-lite = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
url = "2.4"
tokio = { version = "1.39.3", features = ["macros"]}
sha2 = { version = "0.10" }
# hex-literal = "0.4"
hex = "0.4"
thiserror = "1.0"
regex = "1.10"
smallvec = "1.13"
percent-encoding = "2.3"
bincode = "1.3.3"

[dev-dependencies]
proxy-wasm-test-framework = { git = "https://github.com/proxy-wasm/test-framework.git", branch = "main"}
rand = "0.8"
tokio = { version = "1.39.3", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"