[workspace]
resolver = "2"
members = [
	"pow-waf",
	"pow-runtime",
	"pow-types"
]

[workspace.package]
authors = ["mingyang91 <my@famer.me>"]
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
pow-waf = { path = "pow-waf", version = "0.1.0" }
pow-runtime = { path = "pow-runtime", version = "0.1.0" }
pow-types = { path = "pow-types", version = "0.1.0" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
