[package]
name = "pow-auth"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["bincode"]
bincode = []
serde_json = []

[dependencies]
log = "0.4"
proxy-wasm = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
bincode = "1.3.3"
pow-runtime.workspace = true
pow-types.workspace = true
secp256k1 = { version = "0.29.1", features = ["serde"] }
sha2 = "0.10"

[dev-dependencies]
hex-literal = "0.4"
