[package]
name = "pow-mine"
version = "0.1.0"
authors = ["明扬 <my@famer.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "console_log"]

[dependencies]
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
pow-types.workspace = true

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.50", features = ["console", "Worker"] }
console_log = { version = "1", optional = true }
log = "0.4"
serde-wasm-bindgen = "0.6"
thiserror = "1.0"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
sha2 = { version = "0.10" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
