[package]
name = "pow-runtime"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["bincode"]
bincode = ["dep:bincode"]
serde_json = ["dep:serde_json"]

[dependencies]
log = "0.4"
proxy-wasm = "0.2.2"
pin-project-lite = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"
regex = "1.10"
smallvec = "1.13"
percent-encoding = "2.3"
bincode = { version = "1.3.3", optional = true }

[dev-dependencies]
serde_yaml = "0.9"