[package]
name = "pow-waf"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["bincode"]
bincode = []
serde_json = []

[dependencies]
log = "0.4"
proxy-wasm = "0.2.2"
pin-project-lite = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
url = "2.4"
tokio = { version = "1.39.3", features = ["macros"] }
sha2 = { version = "0.10" }
hex = "0.4"
thiserror = "1.0"
regex = "1.10"
smallvec = "1.13"
percent-encoding = "2.3"
bincode = "1.3.3"
pow-runtime.workspace = true
pow-types.workspace = true

[dev-dependencies]
rand = "0.8"
futures = "0.3"