[package]
name = "pow-waf"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["bincode"]
bincode = ["dep:bincode"]
serde_json = []

[dependencies]
log = "0.4"
proxy-wasm = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }
sha2 = { version = "0.10" }
hex = "0.4"
thiserror = "1.0"
bincode = { version = "1.3.3", optional = true }
pow-runtime.workspace = true
pow-types.workspace = true

[dev-dependencies]
rand = "0.8"
futures = "0.3"
