[package]
name = "mock-client"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "mock-client"
path = "src/main.rs"

[dependencies]
pow-types = { path = "../../pow-types", version = "0.1.0" }
tokio ={ version = "1", features = ["full"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
sha2 = { version = "0.10" }
thiserror = "1.0"